
 * Fix bug in reindex_member_project_ids that could prevent a member
   from showing up on a private project's team page.
   (slinkp) (http://trac.openplans.org/errors-openplans/ticket/36)

   This fix prevents the problem from happening in the future;
   to fix your existing data, reindex the membrane tool:
   in the ZMI go to .../membrane_tool/manage_catalogAdvanced and click
   "Update Catalog". Warning, this can take a very long time!
   (436 secs XXX

 * Fix stats view, broken by plone3 upgrade (cabraham, slinkp)

 * Memoize member and project lists in ProjectTeamView for
   performance; change names for clarity. (slinkp)

 * Fix upgrades/to_0_13_0.py to actually migrate all the mailing lists
   (slinkp et al.)

 * Wiki history "Last edit performed by..." now correctly shows the
   last edit, not the first. (slinkp) (ticket #2704)

 * Show a useful error message when doing wiki version comparison
   against an old binary upload. (slinkp) (errors-openplans #31)

 * Fixed: errors on invalid input to contact-site-admin page. (slinkp)
   (http://trac.openplans.org/errors-openplans/ticket/43)

 * Fixed: potential Unicode errors in email_sender (slinkp).
   (http://trac.openplans.org/errors-openplans/ticket/44)

 * memoize project_noun for performance (novalis)

 * Fix broken test monkeypatching in opencore.auth.tests. (slinkp)

 * correct permission issues with Attachments (rafrombrc)

 * fixed NameError: getToolByName in project membership request
   handler (slinkp)
   (http://trac.openplans.org/errors-openplans/ticket/38)

 * Octopus no longer returns JSON messages when there's nothing to
   report (douglas)

 * Fixed: potential UnicodeDecodeError when inviting by email (rmarianski)

 * Fixed: potential AttributeError when deleting images (rmarianski)
   (http://trac.openplans.org/errors-openplans/ticket/9)

 * Resolve potential errors on page deletions from contents view.
   (rmarianski)
   (http://trac.openplans.org/errors-openplans/ticket/8